--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
     <link rel="stylesheet" href="./style.css">
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <img src="./assets/logo-mobile.svg" alt="Logo">
+      <img class="desktop" src="./assets/logo-desktop.svg" alt="Logo" hidden>
+      <img class="menu" src="./assets/menu-buguer-open.svg" alt="Abrir menu">
+    </header>
+    <main>
+      <h1>O café que fará seu código decolar para o próximo nível.</h1>
+      <button type="button">
+        Pegar meu café
+        <img src="./assets/arrow.svg" alt="Ícone de uma seta">
+      </button>
+      <div class="titles">
+        <span class="normal-title">Great Coffee</span>
+        <span class="shadow-title">&lt;Great Code/&gt;</span>
+      </div>
+      <img class="rocket-coffee-img" src="./assets/rocket-coffee.png"
+        alt="Rocket Coffee">
+      <div class="menu-mobile" hidden>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Recompensas</a></li>
+          <li><a href="#">Gift Cards</a></li>
+          <li><a href="#">Lojas</a></li>
+        </ul>
+      </div>
+    </main>
+  </body>
 
 </html>
