--- a/index.html
+++ b/index.html
@@ -15,13 +15,27 @@
 
   <body>
     <header>
-      <img src="./assets/logo-mobile.svg" alt="Logo">
-      <img class="desktop" src="./assets/logo-desktop.svg" alt="Logo" hidden>
-      <img class="menu" src="./assets/menu-buguer-open.svg" alt="Abrir menu">
+      <img class="mobile" src="./assets/logo-mobile.svg" alt="Logo">
+      <img class="desktop" src="./assets/logo-desktop.svg" alt="Logo">
+      <img class="mobile menu" src="./assets/menu-buguer-open.svg"
+        alt="Abrir menu">
+      <nav class="desktop menu-desktop">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Recompensas</a></li>
+          <li><a href="#">Gift Cards</a></li>
+          <li><a href="#">Lojas</a></li>
+        </ul>
+      </nav>
+      <button class="desktop" type="button">
+        Pegar meu café
+      </button>
     </header>
     <main>
-      <h1>O café que fará seu código decolar para o próximo nível.</h1>
-      <button type="button">
+      <h1 class="mobile">O café que fará seu código decolar para o próximo
+        nível.</h1>
+      <button class="mobile" type="button">
         Pegar meu café
         <img src="./assets/arrow.svg" alt="Ícone de uma seta">
       </button>
