feat: add event listener to open/close mobile menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <img class="desktop" src="./assets/logo-desktop.svg" alt="Logo">
       <img class="mobile menu" src="./assets/menu-buguer-open.svg"
         alt="Abrir menu">
+      <img class="mobile close-menu" src="./assets/menu-buguer-close.svg"
+        alt="Fechar menu" hidden>
       <nav class="desktop menu-desktop">
         <ul>
           <li><a href="#">Home</a></li>
@@ -45,7 +47,7 @@
       </div>
       <img class="rocket-coffee-img" src="./assets/rocket-coffee.png"
         alt="Rocket Coffee">
-      <div class="menu-mobile" hidden>
+      <div class="mobile menu-mobile" hidden>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Menu</a></li>
@@ -55,6 +57,7 @@
         </ul>
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 
 </html>
