fix: adjust mobile menu when opened

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
       <img class="desktop" src="./assets/logo-desktop.svg" alt="Logo">
       <img class="mobile menu" src="./assets/menu-buguer-open.svg"
         alt="Abrir menu">
-      <img class="mobile close-menu" src="./assets/menu-buguer-close.svg"
-        alt="Fechar menu" hidden>
       <nav class="desktop menu-desktop">
         <ul>
           <li><a href="#">Home</a></li>
@@ -48,6 +46,11 @@
       <img class="rocket-coffee-img" src="./assets/rocket-coffee.png"
         alt="Rocket Coffee">
       <div class="mobile menu-mobile" hidden>
+        <div class="menu-header">
+          <img class="mobile" src="./assets/logo-mobile.svg" alt="Logo">
+          <img class="mobile close-menu" src="./assets/menu-buguer-close.svg"
+            alt="Fechar menu">
+        </div>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Menu</a></li>
